--- a/day6/index.html
+++ b/day6/index.html
@@ -19,11 +19,30 @@
         <div class="card__img">
             <img src="images/iphone14.png" alt="">
         </div>
-        <div class="card__title"></div>
-        <div class="card__price"></div>
-        <div class="card__rom"></div>
-        <div class="card__color"></div>
-        <div class="card__action"></div>
+        <div class="card__title">
+            Iphone 14 Pro max
+        </div>
+        <div class="card__price">
+            30.000.000 Đ
+        </div>
+        <div class="card__rom">
+            <h3>ROM:</h3>
+            <span>128Gb</span>
+            <span>256Gb</span>
+            <span>512Gb</span>
+            <span>1T</span>
+        </div>
+        <div class="card__color">
+            <h3>Color:</h3>
+            <span class="color-purple"></span>
+            <span class="color-black"></span>
+            <span class="color-gold"></span>
+            <span class="color-white"></span>
+        </div>
+        <div class="card__action">
+            <button>Buy now</button>
+            <button>Add to cart</button>
+        </div>
     </div>
 </body>
 </html>
