--- a/day8/index.html
+++ b/day8/index.html
@@ -9,6 +9,43 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <p>Chris Batman</p>
+    <div class="card__img">
+        <img src="images/bale.jpg" alt="Day la anh Henry">
+    </div>
+    <div class="card">
+        <div class="card__img">
+            <!-- child element -->
+            <div class="card__img--item">
+                <!-- .cart .card__img .card__img--item -->
+            </div>
+            <img src="images/bale.jpg" alt="Day la anh Henry"> 
+        </div>
+        <h2>Christian Bale</h2>
+        <p>Batman</p>
+        <p>Chris Batman</p>
+        <div class="card__social--icon">
+            <a href=""><i class='bx bxl-facebook-circle'></i></a>
+            <a href=""><i class='bx bxl-google'></i></a>
+            <a href=""><i class='bx bxl-twitter'></i></a>
+            <a href=""><i class='bx bxl-github'></i></a>
+        </div>
+        <button>Contact me</button>
+    </div>
+    <div class="card">
+        <div class="card__img">
+            <img src="images/emma.jpg" alt="Day la anh Henry">
+        </div>
+        <h2>Emma Watson</h2>
+        <p>The Beauty</p>
+        <div class="card__social--icon">
+            <a href=""><i class='bx bxl-facebook-circle'></i></a>
+            <a href=""><i class='bx bxl-google'></i></a>
+            <a href=""><i class='bx bxl-twitter'></i></a>
+            <a href=""><i class='bx bxl-github'></i></a>
+        </div>
+        <button>Contact me</button>
+    </div>
     <div class="card">
         <div class="card__img">
             <img src="images/henry.jpg" alt="Day la anh Henry">
