--- a/day10/index.html
+++ b/day10/index.html
@@ -95,7 +95,7 @@
                 sidebar
             </div>
             <div class="col-10">
-                body content
+                Body content 
             </div>
         </div>
     </div>
