--- a/day18/index.html
+++ b/day18/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="baitap">
+        Nhập vào 1 mảng gồm 5 phần tử.
+        1. Tìm ra giá trị lớn nhất
+        2. Tìm ra giá trị nhỏ nhất
+        3. Sắp xếp các giá trị theo thứ tự tăng dần
+        4. Sắp xếp các giá trị theo thứ tự giảm dần
+        5. Tính trung bình cộng của giá trị min và giá trị max
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
