--- a/day18/index.html
+++ b/day18/index.html
@@ -11,9 +11,12 @@
         Nhập vào 1 mảng gồm 5 phần tử.
         1. Tìm ra giá trị lớn nhất
         2. Tìm ra giá trị nhỏ nhất
-        3. Sắp xếp các giá trị theo thứ tự tăng dần
-        4. Sắp xếp các giá trị theo thứ tự giảm dần
-        5. Tính trung bình cộng của giá trị min và giá trị max
+        3. Sắp xếp các giá trị theo
+            thứ tự tăng dần
+        4. Sắp xếp các giá trị 
+            theo thứ tự giảm dần
+        5. Tính trung bình cộng 
+            của giá trị min và giá trị max
     </div>
     <script src="js/script.js"></script>
 </body>
