--- a/day23/index.html
+++ b/day23/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <script src="./js/script.js"></script>
+    <script>
+        function funcOnLoad() {
+            alert('on load window');
+        }
+
+        // window.onload = () => {
+        //     alert("page is fully loaded");
+        // };
+    </script>
 </body>
 </html>
